2005-03-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/mahjongg.xml: Bump the app version number. No revisions.

2005-01-05  Richard Hoelscher  <rah@rahga.com>

	* drawing.c: More detail for the image warning messages. 
	(load_images): Return to loading a default theme when missing one.
	* mahjongg.c (mahjongg_theme_warning): Offer a preferences button
	when the tile set fails to load.

2005-01-03  Richard Hoelscher  <rah@rahga.com>

	* drawing.c (load_images): Preimage API update, uri -> file.

2004-11-17  Richard Hoelscher  <rah@rahga.com>

	* mahjongg.h
	* mahjongg.c (mahjongg_theme_warning): Display a warning dialog
	when images fail to load. After the warning, display prefs if not
	already shown.
	(tileset_changed_cb): Reset the image warning dialog.
	* drawing.c (recreate_tile_images, load_images): Warning support.

2004-12-18  Callum McKenzie  <callum@physics.otago.ac.nz>

	* maps.c (compare_tiles): Fix the tile sorting routines.

2004-11-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.map:	
	* maps.c: Move some of the hard-coded maps out to file (Four
	Bridges and The Ziggurat).

2004-11-04  Callum McKenzie  <callum@physics.otago.ac.nz>

	* maps.c:
	* maps.h:
	* mahjongg.c:
	* mahjongg.h: Add code to load maps from a file.

	* solubility.h: Protect if the #ifndef etc.

2004-11-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: Menu state fixes. Including bug #156961.

2004-11-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c (stop_hints): Fix the fix. It now works for cases
	other than just "New Game".
	(stop_hints): New, new, improved, improved, fix.

2004-10-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c (stop_hints): Set timeout_counter directly to
	HINT_BLINK_NUM rather than repeatedly calling hint_callback to
	increment it.

2004-10-30  Richard Hoelscher  <rah@rahga.com>

	* mahjongg.c (stop_hints): Run down the hint timeout, called from